bridge-build-current.log
info: syncing channel updates for stable-x86_64-unknown-linux-gnu
info: latest update on 2026-07-09 for version 1.97.0 (2d8144b78 2026-07-07)
info: component clippy is up to date
info: component rust-std is up to date
info: component rustfmt is up to date
info: downloading component rust-std
[1m[91merror[E0425][0m[1m: cannot find value `DEFAULT_MAX_MODEL_STORAGE_BYTES` in module `mukei_core::storage`[0m
  [1m[94m--> [0mcrates/mukei-bridge/src/storage_bridge.rs:10:42
   [1m[94m|[0m
[1m[94m10[0m [1m[94m|[0m     let max_bytes = mukei_core::storage::DEFAULT_MAX_MODEL_STORAGE_BYTES;
   [1m[94m|[0m                                          [1m[91m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m [1m[91mnot found in `mukei_core::storage`[0m

[1m[91merror[E0599][0m[1m: no associated function or constant named `load` found for struct `UiSessionRepository` in the current scope[0m
    [1m[94m--> [0mcrates/mukei-bridge/src/lib.rs:4276:67
     [1m[94m|[0m
[1m[94m4276[0m [1m[94m|[0m                         mukei_core::storage::UiSessionRepository::load(
     [1m[94m|[0m                                                                   [1m[91m^^^^[0m [1m[91massociated function or constant not found in `UiSessionRepository`[0m
     [1m[94m|[0m
     [1m[94m= [0m[1mhelp[0m: items from traits can only be used if the trait is implemented and in scope
[1m[92mnote[0m: `SecureKeyProvider` defines an item `load`, perhaps you need to implement it
    [1m[94m--> [0mcrates/mukei-bridge/src/bootstrap.rs:123:1
     [1m[94m|[0m
[1m[94m 123[0m [1m[94m|[0m pub(crate) trait SecureKeyProvider {
     [1m[94m|[0m [1m[92m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m

[1m[91merror[E0382][0m[1m: borrow of moved value: `model_id`[0m
    [1m[94m--> [0mcrates/mukei-bridge/src/lib.rs:2727:40
     [1m[94m|[0m
[1m[94m2727[0m [1m[94m|[0m                         let model_id = model_id.clone();
     [1m[94m|[0m                                        [1m[91m^^^^^^^^[0m [1m[91mvalue borrowed here after move[0m
[1m[94m...[0m
[1m[94m2809[0m [1m[94m|[0m                         let _ = qt_for_ev.queue(move |mut qobject| {
     [1m[94m|[0m                                                 [1m[94m------------------[0m [1m[94mvalue moved into closure here, in previous iteration of loop[0m
     [1m[94m|[0m
     [1m[94m= [0m[1mnote[0m: move occurs because `model_id` has type `std::option::Option<std::string::String>`, which does not implement the `Copy` trait

[1mSome errors have detailed explanations: E0382, E0425, E0599.[0m
[1mFor more information about an error, try `rustc --explain E0382`.[0m
[1m[91merror[0m: could not compile `mukei-bridge` (lib) due to 3 previous errors
exit_status=101
